--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 PORT=4002
 MONGO_URI="mongodb+srv://subhankardeydevfrend_db_user:v8gB3WjP1egNX1Nm@cluster0.9q5l50p.mongodb.net/botspooff"
+JWT_SECRET ="secret"
+NODE_ENV="production"
